# mc10-tools

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  bump-info.json  docker-compose.yml  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  bump-version.yml  make-release.yml
mc10/: __init__.py  bastoc10.py  c10.py  c10tobas.py  conftest.py  mcbasic.py  mclex.py
mc10/mc10/: __init__.py  bastoc10.py  c10.py  c10tobas.py  mcbasic.py  mclex.py
tests/: conftest.py
tests/mc10/: conftest.py  test_c10.py  test_mcbasic.py
tests/mc10/resources/: all-keywords.c10  blork.c10  blork_bad_block.c10  blork_bad_initial_block.c10  simple.bas  simple.c10
