[project]
name = "mc10-tools"
version = "0.9"
authors = [
  {name = "Jamie Cho", email = "jamieleecho+mc10-tools@gmail.com"},
]
description = "Set of MC-10 tools"
readme = "README.md"
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
]
license = "MIT"
keywords = [
  "mc-10",
  "basic",
  "conversion",
  "trs-80",
  "tandy",
]
requires-python = ">=3.9.19"
dependencies = [
  "click >= 7.1.3",
  "ply >= 3.11",
]

[project.scripts]
c10tobas = "mc10.c10tobas:c10tobas"
bastoc10 = "mc10.bastoc10:bastoc10"

[project.urls]
Repository = "https://github.com/jamieleecho/mc10-tools"
Issues = "https://github.com/jamieleecho/mc10-tools/issues"

[dependency-groups]
dev = [
  "coverage",
  "imagehash",
  "pytest",
  "pre-commit",
  "ruff",
]

[build-system]
requires = [
  "setuptools",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests.mc10"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
"coco.resources" = ["*.b09"]

[tool.pytest.ini_options]
rootdir = "."
pythonpath = [
  ".",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "quick: marks tests as fast",
]

[tool.ruff]
exclude = [
  "docs/",
]

[tool.ruff.lint]
extend-select = ["I"]
